--- a/shippingcity/AndroidManifest.xml
+++ b/shippingcity/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.ateam.shippingcity.HomeActivity"
+            android:launchMode="singleTask"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity android:name="com.ateam.shippingcity.activity.PalletAndQuoteCommonActivity"></activity>
+        <activity android:name="com.ateam.shippingcity.activity.PersonalCenterActivity"
+            android:theme="@style/ActivityDialogTheme"
+            ></activity>
         <service android:name=".service.APKDownloadService"></service>
     </application>
 
