--- a/shippingcity/AndroidManifest.xml
+++ b/shippingcity/AndroidManifest.xml
@@ -7,17 +7,19 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:name="com.ateam.shippingcity.application.HBaseApp"
         android:allowBackup="true"
-        android:name=".application.HBaseApp"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.ateam.shippingcity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +27,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <service android:name=".service.APKDownloadService"></service>
+
+        <service android:name="com.ateam.shippingcity.service.APKDownloadService" >
+        </service>
+
+        <activity
+            android:name="com.ateam.shippingcity.TextActivity"
+            android:label="@string/title_activity_text" >
+        </activity>
     </application>
 
 </manifest>
