--- a/shippingcity/AndroidManifest.xml
+++ b/shippingcity/AndroidManifest.xml
@@ -88,6 +88,10 @@
             android:theme="@style/StyledIndicators" >
         </activity>
         <activity
+            android:name="com.ateam.shippingcity.activity.HWebViewActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="com.ateam.shippingcity.activity.PersonalCenterActivity"
             android:screenOrientation="portrait"
             android:theme="@style/ActivityDialogTheme" >
