--- a/shippingcity/AndroidManifest.xml
+++ b/shippingcity/AndroidManifest.xml
@@ -11,18 +11,19 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.READ_CONTACTS" />
-	<uses-permission android:name="android.permission.CALL_PHONE" />
-	<!-- 分享 -->
-	<uses-permission android:name="android.permission.GET_TASKS" />
- 	<uses-permission android:name="android.permission.INTERNET" />
- 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
- 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
- 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
- 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
- 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
- 	<uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
- 	<uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <!-- 分享 -->
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
     <application
         android:name="com.ateam.shippingcity.application.HBaseApp"
         android:allowBackup="true"
@@ -31,47 +32,53 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="cn.sharesdk.framework.ShareSDKUIShell"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:windowSoftInputMode="stateHidden|adjustResize" >
-            <!-- 
+
+            <!--
             	Adapter表示一个继承自cn.sharesdk.framework.authorize.AuthorizeAdapter的类，
             	这个类可以监听到页面的生命周期，也可以获取授权页面的各种UI控件。 
             	开发者可以通过继承AuthorizeAdapter，重写其方法，并获取各种UI来自定义这个页面的行为。
-            <meta-data android:name="Adapter" android:value="cn.sharesdk.demo.MyAdapter" />            
+            <meta-data android:name="Adapter" android:value="cn.sharesdk.demo.MyAdapter" />            
             -->
-            
+
+
             <!--
             	Dropbox的SSO功能需要在此处添加一个对ACTION_VIEW事件的过滤器，其中的scheme是
-            	“db-”前缀再开发者应用的加上appKey。如果此过滤器不设置，则不能完成SSO功能授权
+            	“db-”前缀再开发者应用的加上appKey。如果此过滤器不设置，则不能完成SSO功能授权
             -->
-            <!-- <intent-filter>
+            <!--
+            <intent-filter>
                 <data android:scheme="db-7janx53ilz11gbs" />
         		<action android:name="android.intent.action.VIEW" />
         		<category android:name="android.intent.category.BROWSABLE"/>
         		<category android:name="android.intent.category.DEFAULT" />
-            </intent-filter> -->
-            
-			<!--
+            </intent-filter>
+            -->
+
+
+            <!--
             	如果集成QQ分享，或者使用QQ客户端来进行QQ空间的分享，须要在此处添加一个对ACTION_VIEW
             	事件的过滤器，其中的scheme是“tencent”前缀再开发者应用的加上appId。如果此过滤器不设置，
-            	则分享结束以后不能得到正确的回调
+            	则分享结束以后不能得到正确的回调
             -->
             <intent-filter>
                 <data android:scheme="tencent100371282" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
         <!-- 微信 -->
-         <activity
-             android:name="cn.sharesdk.onekeyshare.weixinapi.WXEntryActivity"
-             android:configChanges="keyboardHidden|orientation|screenSize"
-             android:exported="true"
-             android:screenOrientation="portrait"
-             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
+        <activity
+            android:name="cn.sharesdk.onekeyshare.weixinapi.WXEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name="com.ateam.shippingcity.HomeActivity"
             android:label="@string/app_name"
@@ -99,8 +106,7 @@
         <activity
             android:name="com.ateam.shippingcity.activity.PersonalAttentionPalletActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/StyledIndicators"
-             >
+            android:theme="@style/StyledIndicators" >
         </activity>
         <activity
             android:name="com.ateam.shippingcity.activity.PictureSelectDialogActivity"
@@ -211,23 +217,23 @@
         </activity>
         <activity
             android:name="com.ateam.shippingcity.activity.PalletSeaSpellOfferActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name="com.ateam.shippingcity.activity.PalletSeaDiffOfferActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name="com.ateam.shippingcity.activity.PalletAirOfferActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name="com.ateam.shippingcity.activity.PalletLordOfferActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name="com.ateam.shippingcity.activity.PalletOfferResultActivity"
