--- a/shippingcity/AndroidManifest.xml
+++ b/shippingcity/AndroidManifest.xml
@@ -90,6 +90,7 @@
         <activity
             android:name="com.ateam.shippingcity.activity.PersonalLoginActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:theme="@style/ActivityDialogTheme" >
         </activity>
         <activity
