--- a/shippingcity/AndroidManifest.xml
+++ b/shippingcity/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity
             android:name="com.ateam.shippingcity.activity.PersonalAttentionPalletActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:theme="@style/StyledIndicators" >
         </activity>
         <activity
