2015-04-22 Helen 修改手机号，增加验证旧手机的流程

--- a/shippingcity/AndroidManifest.xml
+++ b/shippingcity/AndroidManifest.xml
@@ -123,6 +123,10 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name="com.ateam.shippingcity.activity.PersonalVerifyOldMobileActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="com.ateam.shippingcity.activity.PersonalModifyAddressActivity"
             android:screenOrientation="portrait" >
         </activity>
